# asset_management

./: .gitignore  App.Dockerfile  DB.Dockerfile  docker-compose.yml
WebContent/: balance-history.html  balance-history.js  balance_current.template.html  balance_current_sim.template.html  balance_history.template.html  chart-plugin.js  currenct-balance.js  current-balance.html  current-balance.js  footer.html  header.html  header_footer.js  index.html  sim_history.html  style.css
batch/: batch_coincheck  batch_nicehash  daily.sh  log_archive.sh  scraping.sh  setup.sh
batch/DB/: cron  dump.sh  mysql.cnf  slim.sh  slim.sql
docker/: crontab
docker-autotrader-db/: docker-compose.yml
docker-autotrader-db/docker-entrypoint-initdb.d/: autotrader.sql  sim.sql
docker-mysql/: docker-compose.yml
docker-mysql/docker-entrypoint-initdb.d/: asset.sql
docker/docker-entrypoint-initdb.d/: autotrader.sql
rust/: Cargo.toml
rust/batch_coincheck/: Cargo.toml
rust/batch_coincheck/src/: main.rs
rust/batch_nicehash/: Cargo.toml
rust/batch_nicehash/src/: main.rs
rust/common/: Cargo.toml
rust/common/src/: alias.rs  err.rs  http_query.rs  id_macro.rs  lib.rs  log.rs  settings.rs
rust/database/: Cargo.toml
rust/database/src/: custom_sql_type.rs  entity.rs  error.rs  lib.rs  logic.rs  model.rs  schema.rs
rust/nicehash/: Cargo.toml
rust/nicehash/src/: api_common.rs  lib.rs
rust/nicehash_autotrade/: .env  Cargo.toml
rust/nicehash_autotrade/src/: db.rs  error.rs  logic.rs  model.rs  schema.rs  scraper.rs
rust/nicehash_autotrade/src/db/: entity.rs  error.rs
rust/nicehash_scraper/: .env  Cargo.toml
rust/nicehash_scraper/src/: main.rs
rust/nicehash_speculator/: .env  Cargo.toml
rust/nicehash_speculator/src/: main.rs  market_parse.rs  rule_parse.rs  trade_parse.rs
rust/server/: .env  Cargo.toml
rust/server/src/: api.rs  exchange_graph.rs  main.rs  template_render.rs
rust/speculator/: Cargo.toml
rust/speculator/src/: indicator.rs  lib.rs  rsi.rs  rule.rs  speculator.rs  trade.rs
rust/speculator/src/indicator/: bollinger.rs  chart.rs  rsi.rs
rust/speculator/src/rule/: fixed.rs  rsi_cross.rs  rsi_divergence.rs
settings/speculator/: market.json  rule.json  trade.json
