[package]
name = "nicehash_speculator"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
nicehash = { path = "../nicehash" }
speculator = { path = "../speculator" }
anyhow = "*"
apply = "*"
chrono = "*"
# libmysqlclient-dev is required
diesel = { version = "1", features = ["mysql", "chrono"] }
dotenv = "*"
env_logger = "*"
itertools = "*"
log = "*"
option-inspect = "*"
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
validator = { version = "*", features = ["derive"] }
