[package]
name = "server"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
database = { path="../database" }
hyper = { version="*", features=["full"] }
templar = "0.4.2"
tokio = { version="*", features=["full"] }
