[package]
name = "speculator"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
anyhow = "*"
apply = "*"
chrono = "*"
itertools = "*"
serde = { version = "*", features = ["derive"] }
ta = "*"
thiserror = "*"
typetag = "*"
validator = { version = "*", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "*"
